--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,18 +1,25 @@
 header {
     padding: 16px 0;
     box-shadow: 10px 10px 5px rgb(145, 170, 182);
-
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+background-color: #fff;
 
     nav {
         display: flex;
         justify-content: space-between;
-
+        align-items: center;
+        
         .nav__list {
             list-style-type: none;
             display: flex;
+            align-items: center;
 
             .nav__item {
                 margin-left: 32px;
+                align-items: center;
               
                 a {
                   text-decoration: none;
